// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DwollaBalanceDisplay 1`] = `
<DocumentFragment>
  <dwolla-balance-display
    customerid="123"
  />
</DocumentFragment>
`;

exports[`with optional props 1`] = `
<DocumentFragment>
  <dwolla-balance-display
    customerid="123"
    hidezerobalance=""
  />
</DocumentFragment>
`;
